- Fixed bug #45202 (zlib.output_compression can not be set with ini_set())

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@281117 c90b9560-bf6c-de11-be94-00142212c4b1